[package]
name = "antsim_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_egui = "0.34.1"
bevy_vector_shapes = "0.10.0"
rand = "0.9.1"
futures-lite = "2.6.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
